--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
     "apollo-server-express": "^2.25.3",
+    "argon2": "^0.28.2",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "pg": "^8.7.1",
