--- a/package.json
+++ b/package.json
@@ -30,11 +30,17 @@
     "@mikro-orm/core": "^4.5.9",
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
+    "@types/connect-redis": "0.0.17",
+    "@types/express-session": "^1.17.4",
+    "@types/redis": "^2.8.32",
     "apollo-server-express": "^2.25.3",
     "argon2": "^0.28.2",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.3.0",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
