--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apollo-server-express": "^2.25.3",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.3.0",
