--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^7.32.0",
@@ -40,9 +41,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.3.0",
+    "nodemailer": "^6.7.1",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "validator": "^13.7.0"
   },
   "mikro-orm": {
     "useTsNode": true,
