--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "tsc -w",
+    "w": "tsc -w",
     "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js",
-    "migration": "npx mikro-orm migration:create"
+    "d": "nodemon dist/index.js",
+    "m": "npx mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.1",
     "@types/node": "^16.11.7",
     "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^7.32.0",
@@ -41,10 +43,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.3.0",
+    "ioredis": "^4.28.1",
     "nodemailer": "^6.7.1",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
     "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
   "mikro-orm": {
