--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ioredis": "^4.28.1",
     "nodemailer": "^6.7.1",
     "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
