--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "w": "tsc -w",
-    "start": "node dist/index.js",
     "d": "nodemon dist/index.js",
-    "m": "npx mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "@types/node": "^16.11.7",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.3",
+    "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^7.32.0",
@@ -29,10 +29,6 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.9",
-    "@mikro-orm/core": "^4.5.9",
-    "@mikro-orm/migrations": "^4.5.9",
-    "@mikro-orm/postgresql": "^4.5.9",
     "@types/connect-redis": "0.0.17",
     "@types/express-session": "^1.17.4",
     "@types/redis": "^2.8.32",
@@ -51,12 +47,5 @@
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
