--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "w": "tsc -w",
-    "d": "nodemon dist/index.js",
+    "watch": "tsc -w",
+    "dev": "nodemon dist/index.js",
     "start": "node dist/index.js"
   },
   "keywords": [],
